# naive_nn

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
include/NNN/: activation.h  layer.h  loss.h  model.h  nnn.h  train.h
src/: activation.c  layer.c  loss.c  model.c  nnn.c  train.c  util.c  util.h
test/: main.c
